# sim

./: .clangd  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: glad.c.ACF4F1139DFBA26B.idx  glad.h.9CC3C3A4498FC616.idx  glfw3.h.99F9E51E985E8DFC.idx  khrplatform.h.6FBFB29474D5D8E1.idx  main.cpp.27A39AE83A87172C.idx  objects.hpp.0FF5107B3FDF97F9.idx  shader.cpp.8995DBA20E6952C0.idx  shader.hpp.FBDD3E22C605C9D3.idx  vao.cpp.B942B8BC0EEC937F.idx  vao.hpp.5E8E5E941A00F2F9.idx
include/: log.hpp  objects.hpp  shader.hpp  vao.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  log.cpp  main.cpp  objects.cpp  shader.cpp  vao.cpp
